war/css/footer.css
html, body { height: 100%; } /* The html and body elements cannot have any padding or margin. */

/* Wrapper for page content to push down footer */
#wrap {
	min-height: 99.5%;
	height: auto !important;
	height: 99.5%;
	margin: 0 auto -60px; /* Negative indent footer by it's height */
}

#push {	height: 60px; } /* Set the fixed height of the footer */

#footer {
	background-color: #eee;
	height: auto;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
	#footer {
		margin-left: -20px;
		margin-right: -20px;
		padding-left: 20px;
		padding-right: 20px;
	}
}

.container p { margin: 20px 0; }

@media print { #footer { display: none; } }

